--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,7 +40,29 @@ body {
 }
 
 .header__image {
-  height: 100%;
+  height: 100%;a
+}
+
+.subscription {
+  border-bottom: 1px solid var(--star-wars-yellow);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+}
+
+.subscribe-button {
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 10px 20px;
+  font-family: starjedi;
+}
+
+.subscribe-button.subcribed {
+  border: 1px solid var(--star-wars-yellow);
+  color: var(--star-wars-yellow);
+  background-color: var(--black-color);
 }
 
 /* Section */
